--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 
 [dependencies]
 directories = "5.0.1"
-ureq = { version = "2.9.5", features = ["json"] }
+serde = { version = "1.0.196", features = ["derive"] }
+serde_json = "1.0.113"
+ureq = "2.9.5"
